k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cloudops-client
  namespace: cloudops

spec:
  replicas: 2

  strategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app: cloudops-client

  template:
    metadata:
      labels:
        app: cloudops-client

    spec:
      containers:
        - name: client

          image: shivanshks06/cloudops-client:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service

metadata:
  name: cloudops-client-service
  namespace: cloudops

spec:
  selector:
    app: cloudops-client

  ports:
    - port: 80
      targetPort: 80
